--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,11 @@
      <Compile Include="Assets\Script\NewGuideMask.cs" />
      <Compile Include="Assets\Script\Test.cs" />
      <Compile Include="Assets\Script\UITemplate.cs" />
+     <Compile Include="Assets\Tools\AssetsMgr\AssetsMgr.cs" />
+     <Compile Include="Assets\Tools\UI\IUIController.cs" />
+     <Compile Include="Assets\Tools\UI\UIBase.cs" />
+     <Compile Include="Assets\Tools\UI\UICfg.cs" />
+     <Compile Include="Assets\Tools\UI\UIMgr.cs" />
      <Compile Include="Assets\Tools\UICodeGenerator\UICGTools.cs" />
      <None Include="Assets\Tools\readme.txt" />
  <Reference Include="UnityEngine.Networking">
